Eliminados todos los warnings del backend